# notifications_challenge

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  wrangler.jsonc
.github/workflows/: test.yml
src/: entry.py  main.py
src/app/: config.py  database_models.py
src/app/core/: channel.py  channel_context.py  channel_repository.py  channel_service.py  channel_strategy.py  database.py  logger.py  notification.py  notification_repository.py  notification_service.py  user.py  user_repository.py  user_service.py
src/app/fastapi_app/: main.py
src/app/interface/: channel_context.py  channel_repository.py  channel_service.py  notification_repository.py  notification_service.py  user_repository.py  user_service.py
src/app/interface/channel_strategies/: __init__.py  email.py  email_mock_server.py  push.py  sms.py
tests/: auth.py  conftest.py  db_data.py  test_auth.py  test_e2e_auth.py  test_e2e_channels_crud.py  test_e2e_notifications.py  test_e2e_notifications_crud.py  test_e2e_notify.py  test_e2e_settings.py  test_e2e_users_crud.py  test_notifications.py
tests/interface/channel_strategies/: test_email_regex.py  test_phone_regex.py
