[project]
name = "notifications-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "pyjwt>=2.11.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "sqlalchemy>=2.0.46",
    "sqlalchemy-cloudflare-d1>=0.3.8",
    "webtypy>=0.1.7",
]

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk",
]
